@@ -75,6 +75,7 @@ export(
        "cotab_assoc",
        "cotab_sieve",
        "cotab_loddsratio",
+       "cotab_agreementplot",
        "cotab_fourfold",
        "cotab_coindep",
 
